<?xml version="1.0" encoding="utf-8"?>
<com.whoyao.widget.CustomRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rete_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rete_rl_title"
        style="@style/page_titlebar" >

        <Button
            android:id="@+id/page_btn_back"
            style="@style/page_backbtn" />

        <TextView
            style="@style/page_title"
            android:text="@string/event_add_title" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rete_rl_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                    android:id="@+id/event_add_category_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/event_add_btn_immediately"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button_event_left"
                    android:clickable="true"
                    android:text="即时活动"
                    android:textSize="@dimen/textsize_button"
                    android:textColor="@color/selector_color_black" />

                <Button
                    android:id="@+id/event_add_btn_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_button_event_right"
                    android:clickable="true"
                    android:text="普通活动"
                    android:textSize="@dimen/textsize_button"
                    android:textColor="@color/selector_color_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_add_ll_info0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

                <LinearLayout
                    android:id="@+id/event_add_ll_type"
                    style="@style/info_item_top"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="活动类型：" />

                    <TextView
                        android:id="@+id/event_add_tv_type"
                        android:hint="@string/hint_event_type_select"
                        style="@style/info_item_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_title"
                    style="@style/info_item_middle"
                    android:background="@drawable/rect_radius_white_middle"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="活动名称：" />

                    <EditText
                        android:id="@+id/event_add_et_title"
                        android:background="@null"
                        android:hint="@string/hint_event_title"
                        style="@style/info_item_content" />

                    <TextView
                        style="@style/info_item_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="0dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_begintime"
                    style="@style/info_item_middle"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="开始时间：" />

                    <TextView
                        android:id="@+id/event_add_tv_begintime"
                        android:hint="@string/hint_event_begintime"
                        style="@style/info_item_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_endtime"
                    style="@style/info_item_middle"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="结束时间：" />

                    <TextView
                        android:id="@+id/event_add_tv_endtime"
                        android:hint="@string/hint_event_endtime"
                        style="@style/info_item_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_addr"
                    style="@style/info_item_middle"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="活动地址：" />

                    <TextView
                        android:id="@+id/event_add_tv_addr"
                        style="@style/info_item_content"
                        android:hint="@string/hint_event_addr"
                        android:drawableRight="@drawable/loacl" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_num"
                    style="@style/info_item_middle"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="活动人数：" />

                    <TextView
                        android:id="@+id/event_add_tv_num"
                        android:hint="@string/hint_event_num"
                        style="@style/info_item_content" />
                </LinearLayout>

                 <LinearLayout
                    android:id="@+id/event_add_ll_price"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    style="@style/info_item_middle"
                    android:background="@drawable/cell_bottom_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:focusable="true"
                    	android:focusableInTouchMode="true"
                        android:text="@string/label_event_price" />

                    <EditText
                        android:id="@+id/event_add_et_price"
                        style="@style/info_item_content"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:hint="@string/hint_event_price" />

                </LinearLayout> 

                <LinearLayout
                    android:id="@+id/event_add_ll_paytype"
                    style="@style/info_item_bottom"
                    android:visibility="invisible"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="支付方式：" />

                    <TextView
                        android:id="@+id/event_add_tv_paytype"
                        android:hint="@string/hint_event_paytype"
                        style="@style/info_item_content" />
                </LinearLayout>
            </LinearLayout>

            <!-- 第二个页面 -->

            <LinearLayout
                android:id="@+id/event_add_ll_info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/event_add_ll_keywork"
                    style="@style/info_item_top"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="关键字：" />

                    <TextView
                        android:id="@+id/event_add_tv_keyword"
                        android:hint="@string/hint_event_keyword"
                        style="@style/info_item_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_desc"
                    style="@style/info_item_middle"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="描　述：" />

                    <TextView
                        android:id="@+id/event_add_tv_desc"
                        android:hint="@string/hint_event_desc"
                        style="@style/info_item_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_bill"
                    style="@style/info_item_middle"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="海　报：" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/event_add_iv_bill"
                            android:layout_width="wrap_content"
                            android:layout_height="90dp"
                            android:layout_margin="5dp"
                            android:scaleType="centerInside"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        style="@style/info_item_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="right" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="高级选项（选填）"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/textsize_text" />

                <LinearLayout
                    android:id="@+id/event_add_ll_sex"
                    style="@style/info_item_top"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="性别：" />

                    <TextView
                        android:id="@+id/event_add_tv_sex"
                        style="@style/info_item_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event_add_ll_age"
                    style="@style/info_item_bottom"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/info_item_title"
                        android:text="年龄：" />

                    <TextView
                        android:id="@+id/event_add_tv_age"
                        style="@style/info_item_content" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/event_add_btn_enter"
                style="@style/button_blue"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="下一步" />
        </LinearLayout>
    </ScrollView>

</com.whoyao.widget.CustomRelativeLayout>